# double-slit

./: Cargo.toml  doubleslit.code-workspace  index.html  makefile  readme.md  wasm_cmds
assets/shaders/: interference.wgsl  my_material.wgsl  particles.wgsl  screen.frag  test.wgsl
assets/shaders/webgpu/: light.wgsl
src/: component.rs  interference.rs  main.rs  particles.rs  slit.rs  ui.rs  window.rs
src/baks/: slit_bak.rs
src/interference/: light.rs  mod.rs  particles.rs
